# jsonrpc-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: apidocs.yml  ci-vcpkg.yml  ci.yml  codeql.yml  ctest.yml  lint.yml  update-vcpkg-baseline.yml
cmake/: Doxyfile.in  wwa_jsonrpc-config.cmake
src/: details.h  dispatcher.cpp  dispatcher.h  dispatcher_p.cpp  dispatcher_p.h  exception.cpp  exception.h  export.h  request.cpp  request.h  traits.h  utils.cpp  utils.h
test/: .clang-tidy  CMakeLists.txt  base.cpp  base.h  test_error_handling.cpp  test_exception.cpp  test_extra_param.cpp  test_instrumentation.cpp  test_invocation.cpp  test_notifications.cpp  test_utils.cpp
